Set codecov token

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,3 +36,5 @@ jobs:
           mypy .
       - name: Upload coverge reports to Codecov via GitHub Actions
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
