fix poetry versioning semvar -> pep440

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,4 +57,4 @@ test = "pytest . --doctest-modules && mypy ."
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
-style = "semver"
+style = "pep440"
