--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ pytest-cov = "^4.0.0"
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.3"
 
+
+[tool.poetry.group.doc.dependencies]
+pdoc = "^12.3.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
 build-backend = "poetry_dynamic_versioning.backend"
