--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,5 @@ test = "pytest . --doctest-modules && mypy ."
 enable = true
 vcs = "git"
 style = "pep440"
+
+[tool.poetry-dynamic-versioning.substitution]
