--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -9,6 +9,8 @@ on:
       - main
   workflow_dispatch:
 
+permissions: write-all
+
 jobs:
   GenenerateDocs:
     name: Deploy documents
@@ -32,7 +34,7 @@ jobs:
       - name: Check if docs branch exists
         id: check_docs_branch
         run: |
-          git remote set-url origin https://github-actions:${{ secrets.GH_ACTIONS_ACCESS_TOKEN }}@github.com/${GITHUB_REPOSITORY}
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
           git fetch origin
           if ! git show-ref --quiet refs/remotes/origin/docs; then
             echo "Create docs branch"; \
@@ -41,7 +43,7 @@ jobs:
 
       - name: Push new docs
         run: |
-          git remote set-url origin https://github-actions:${{ secrets.GH_ACTIONS_ACCESS_TOKEN }}@github.com/${GITHUB_REPOSITORY}
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           if (git diff --shortstat origin/docs | grep '[0-9]'); then \
