--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,13 @@ line_length = 99
 
 [tool.mypy]
 ignore_missing_imports = true
+disallow_untyped_defs = true
+disallow_any_unimported = true
+no_implicit_optional = true
+check_untyped_defs = true
+warn_return_any = true
+warn_unused_ignores = true
+show_error_codes = true
 
 [tool.taskipy.tasks]
 lint = "flake8 --show-source hojichar/ tests/ && isort --check-only --diff hojichar/ tests/"
