--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload coverge reports to Codecov via GitHub Actions
         uses: codecov/codecov-action@v3
 
-  lint_type_check:
+  lint_check:
     runs-on: ubuntu-latest
     env:
       python-version: "3.10"
@@ -51,5 +51,22 @@ jobs:
           poetry run isort --check-only --diff .
       - name: Check Flake8
         run: poetry run flake8 --show-source --statistics .
+
+  mypy_check:
+    runs-on: ubuntu-latest
+    env:
+      python-version: "3.10"
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Poetry
+        run: pipx install poetry
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.python-version }}
+          cache: "poetry"
+      - name: Install dependencies
+        run: poetry install --with lint
       - name: Mypy type checking
         run: poetry run mypy --explicit-package-bases hojichar
