--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ numpy = [
 ]
 mmh3 = "^4.0"
 tqdm = "^4.65.0"
+fugashi = {extras = ["unidic-lite"], version = "^1.3.2", optional = true}
+
+[tool.poetry.extras]
+all = ["fugashi"]
 
 [tool.poetry.group.dev]
 optional = true
