--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,15 +17,15 @@ numpy = [
   { version = ">=1.26,<2.0", python = ">=3.9" },
   { version = "<1.25", python = "=3.8" },
 ]
-mmh3 = "^4.0"
 tqdm = "^4.65.0"
 fugashi = { extras = ["unidic-lite"], version = "^1.3.2", optional = true }
-emoji = { version = "^2.13.2", extras = ["all"] }
-fasttext = { version = "^0.9.3", extras = ["all"] }
-requests = { version = "^2.32.3", extras = ["all"] }
+emoji = { version = "^2.13.2", extras = ["all"], optional = true }
+fasttext = { version = "^0.9.3", extras = ["all"], optional = true }
+requests = { version = "^2.32.3", extras = ["all"], optional = true }
+mmh3 = { version = "^5.0.1", extras = ["all"], optional = true }
 
 [tool.poetry.extras]
-all = ["fugashi", "emoji", "fasttext", "requests"]
+all = ["fugashi", "emoji", "fasttext", "requests", "mmh3"]
 
 [tool.poetry.group.dev]
 optional = true
