--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,65 +1,68 @@
-[tool.poetry]
+[project]
 name = "hojichar"
-version = "0.0.0"                                     # Versioning by git tag dinamically with https://github.com/mtkennerly/poetry-dynamic-versioning
+version = "0.0.0"
 description = "Text preprocessing management system."
-license = "Apache-2.0"
-authors = ["kenta.shinzato <hoppiece@gmail.com>"]
+authors = [{ name = "kenta.shinzato", email = "hoppiece@gmail.com" }]
+requires-python = "~=3.9"
 readme = "README.md"
-homepage = "https://github.com/HojiChar/HojiChar"
-repository = "https://github.com/HojiChar/HojiChar"
+license = "Apache-2.0"
+dependencies = [
+    "numpy>=1.26,<2.0 ; python_version >= '3.9'",
+    "tqdm>=4.65.0,<5",
+]
 
-[tool.poetry.scripts]
+[project.optional-dependencies]
+all = [
+    "fugashi[unidic-lite]>=1.3.2,<2",
+    "emoji>=2.13.2,<3",
+    "fasttext>=0.9.3,<0.10",
+    "requests>=2.32.3,<3",
+    "mmh3>=5.0.1,<6",
+]
+
+[project.urls]
+Homepage = "https://github.com/HojiChar/HojiChar"
+Repository = "https://github.com/HojiChar/HojiChar"
+
+[project.scripts]
 hojichar = "hojichar.cli:main"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-numpy = [
-  { version = ">=1.26,<2.0", python = ">=3.9" },
-  { version = "<1.25", python = "=3.8" },
+[dependency-groups]
+dev = [
+    "taskipy>=1.10.3,<2",
+    "types-requests>=2.32.0.20240914,<3",
 ]
-tqdm = "^4.65.0"
-fugashi = { extras = ["unidic-lite"], version = "^1.3.2", optional = true }
-emoji = { version = "^2.13.2", extras = ["all"], optional = true }
-fasttext = { version = "^0.9.3", extras = ["all"], optional = true }
-requests = { version = "^2.32.3", extras = ["all"], optional = true }
-mmh3 = { version = "^5.0.1", extras = ["all"], optional = true }
+lint = [
+    "black>=22.3.0,<23",
+    "flake8>=4.0.1,<5",
+    "isort>=5.10.1,<6",
+    "mypy~=1.0",
+    "types-tqdm>=4.65.0.2,<5",
+    "types-requests>=2.32.0.20240914,<3",
+]
+test = [
+    "pytest>=7.1.2,<8",
+    "pytest-cov>=4.0.0,<5",
+]
+doc = ["pdoc>=12.3.1,<13"]
 
-[tool.poetry.extras]
-all = ["fugashi", "emoji", "fasttext", "requests", "mmh3"]
-
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.lint]
-optional = true
-
-[tool.poetry.group.test]
-optional = true
-
-[tool.poetry.group.lint.dependencies]
-black = "^22.3.0"
-flake8 = "^4.0.1"
-isort = "^5.10.1"
-mypy = "^1.0"
-types-tqdm = "^4.65.0.2"
-types-requests = "^2.32.0.20240914"
-
-[tool.poetry.group.test.dependencies]
-pytest = "^7.1.2"
-pytest-cov = "^4.0.0"
-
-[tool.poetry.group.dev.dependencies]
-taskipy = "^1.10.3"
-types-requests = "^2.32.0.20240914"
-
-
-[tool.poetry.group.doc.dependencies]
-pdoc = "^12.3.1"
+[tool.uv]
+default-groups = [
+    "dev",
+    "lint",
+    "test",
+    "doc",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["hatchling", "uv-dynamic-versioning"]
+build-backend = "hatchling.build"
 
+[tool.hatch.version]
+source = "uv-dynamic-versioning"
+
+[tool.uv-dynamic-versioning]
+fallback-version = "0.0.0" 
 [tool.black]
 line-length = 99
 
@@ -80,13 +83,6 @@ show_error_codes = true
 lint = "flake8 --show-source hojichar/ tests/ && isort --check-only --diff hojichar/ tests/"
 format = "black hojichar/ tests/ && isort hojichar/ tests"
 test = "pytest . --doctest-modules && mypy ."
-
-[tool.poetry-dynamic-versioning]
-enable = true
-vcs = "git"
-style = "pep440"
-
-[tool.poetry-dynamic-versioning.substitution]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
