--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -13,20 +13,16 @@ jobs:
     name: Deploy documents
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
         with:
-          python-version: "3.9"
+          python-version: "3.11"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry config virtualenvs.create false
-          poetry install --with doc --all-extras
+        run: uv sync --no-default-groups --group docs
       - name: Document generation
         run: |
-          pdoc -o docs hojichar
+          uv run pdoc -o docs hojichar
 
       - name: Check if docs branch exists
         id: check_docs_branch
