--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,15 @@
 name: CI wowkflow
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main    
+  pull_request:
+    types: [opened, reopened, synchronize]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   pytest:
     runs-on: ${{ matrix.os }}
