--- a/.github/workflows/release_test.yaml
+++ b/.github/workflows/release_test.yaml
@@ -3,6 +3,12 @@ name: Publish test Test PyPI
 on:
   release:
     types: [created]
+  workflow_dispatch:
+    inputs:
+      TAG_NAME:
+        description: "Tag name for the release"
+        required: true
+        default: ""
 
 jobs:
   Publish:
