Add Index of test-pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,13 @@ default-groups = [
     "test",
 ]
 
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
+
+
 [tool.ruff]
 line-length = 99
 
