--- a/.github/workflows/release_test.yaml
+++ b/.github/workflows/release_test.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       TAG_NAME:
-        description: "Tag name for the release"
+        description: "Tag name for the release (e.g., v0.12.1)"
         required: true
         default: ""
 
@@ -16,6 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.TAG_NAME || github.event.release.tag_name }}
+
       - name: Install uv
         uses: astral-sh/setup-uv@v6
         with:
