--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ lint = [
 ]
 test = [
     "pytest>=7.1.2,<8",
+    "pytest-asyncio>=0.23.8",
     "pytest-cov>=4.0.0,<5",
 ]
 docs = ["pdoc>=12.3.1,<13"]
