Add openai dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ all = [
     "requests>=2.32.3,<3",
     "mmh3>=5.0.1,<6",
 ]
+openai = [
+    "openai[aiohttp]>=1.89.0",
+    "tenacity>=9.1.2"
+    ]
 
 [project.urls]
 Homepage = "https://github.com/HojiChar/HojiChar"
