--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.9, <3.14"
 readme = "README.md"
 license = "Apache-2.0"
 dependencies = [
-    "numpy>=1.26,<2.0 ; python_version >= '3.9'",
+    "numpy>=2.0.0",
     "tqdm>=4.65.0,<5",
 ]
 
