--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,11 @@ openai = [
     "tenacity>=9.1.2"
     ]
 dedup = [
+    "datasketch>=1.6.5",
     "fugashi>=1.5.1",
     "nltk>=3.9.1",
     "redis>=6.2.0",
     "rensa>=0.2.7",
-    "scipy>=1.13.1",
     "xxhash>=3.5.0",
 ]
 
@@ -52,6 +52,7 @@ hojichar = "hojichar.cli:main"
 [dependency-groups]
 dev = [
     "taskipy>=1.10.3,<2",
+    "types-redis>=4.6.0.20241004",
     "types-requests>=2.32.0.20240914,<3",
 ]
 lint = [
